[gd_scene load_steps=8 format=3 uid="uid://buw3r2fgpi0mc"]

[ext_resource type="Script" path="res://scenes/cale.gd" id="1_aw1nx"]
[ext_resource type="Texture2D" uid="uid://r5ct20jjey4b" path="res://assets/graphics/tresor_1_ok_4x.png" id="2_jrewm"]
[ext_resource type="Texture2D" uid="uid://b8k48l4o6cmy5" path="res://assets/graphics/button_base_4x.png" id="3_0p0dv"]
[ext_resource type="Texture2D" uid="uid://bsf8uf2ske850" path="res://assets/graphics/tresor_2_ok_4x.png" id="3_l4vpo"]
[ext_resource type="Texture2D" uid="uid://bckh0c2fj0wm0" path="res://assets/graphics/button_pressed_4x.png" id="4_24hrw"]
[ext_resource type="Texture2D" uid="uid://b1shx0ke0eve8" path="res://assets/graphics/treosr_3_ok_4x.png" id="4_j3s3n"]
[ext_resource type="Texture2D" uid="uid://cp51bjsual8el" path="res://assets/graphics/button_hover_4x.png" id="5_8ku7c"]

[node name="Cale" type="Node2D"]
script = ExtResource("1_aw1nx")

[node name="tresors_1" type="Node2D" parent="."]
position = Vector2(68, 53)

[node name="Sprite2D" type="Sprite2D" parent="tresors_1"]
position = Vector2(-33, -25)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_jrewm")

[node name="Label" type="Label" parent="tresors_1"]
offset_left = -4.0
offset_top = -48.0
offset_right = 47.0
offset_bottom = -6.0
theme_override_font_sizes/font_size = 30
text = "x 3
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="tresors_1"]
visible = false
offset_left = 48.0
offset_top = -42.0
offset_right = 118.0
offset_bottom = -8.0
text = "Throw"

[node name="TextureButton" type="TextureButton" parent="tresors_1"]
modulate = Color(0.875639, 0.676952, 0.529958, 1)
offset_left = 50.0
offset_top = -39.0
offset_right = 211.0
offset_bottom = 14.0
scale = Vector2(0.415, 0.57)
texture_normal = ExtResource("3_0p0dv")
texture_pressed = ExtResource("4_24hrw")
texture_hover = ExtResource("5_8ku7c")

[node name="Label" type="Label" parent="tresors_1/TextureButton"]
layout_mode = 0
offset_left = 9.63855
offset_top = 1.75439
offset_right = 116.639
offset_bottom = 50.7544
scale = Vector2(1.305, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Throw"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tresors_2" type="Node2D" parent="."]
position = Vector2(69, 133)

[node name="Sprite2D" type="Sprite2D" parent="tresors_2"]
position = Vector2(-33, -51)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_l4vpo")

[node name="Label" type="Label" parent="tresors_2"]
offset_left = -4.0
offset_top = -72.0
offset_right = 47.0
offset_bottom = -30.0
theme_override_font_sizes/font_size = 30
text = "x 3
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="tresors_2"]
visible = false
offset_left = 46.0
offset_top = -65.0
offset_right = 116.0
offset_bottom = -31.0
text = "Throw"

[node name="TextureButton" type="TextureButton" parent="tresors_2"]
modulate = Color(0.834907, 0.834907, 0.834907, 1)
offset_left = 50.0
offset_top = -64.0
offset_right = 211.0
offset_bottom = -11.0
scale = Vector2(0.415, 0.57)
texture_normal = ExtResource("3_0p0dv")
texture_pressed = ExtResource("4_24hrw")
texture_hover = ExtResource("5_8ku7c")

[node name="Label" type="Label" parent="tresors_2/TextureButton"]
layout_mode = 0
offset_left = 9.63855
offset_top = 1.75439
offset_right = 116.639
offset_bottom = 50.7544
scale = Vector2(1.305, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Throw"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tresors_3" type="Node2D" parent="."]
position = Vector2(69, 212)

[node name="Sprite2D" type="Sprite2D" parent="tresors_3"]
position = Vector2(-33, -76)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_j3s3n")

[node name="Label" type="Label" parent="tresors_3"]
offset_left = -6.0
offset_top = -98.0
offset_right = 45.0
offset_bottom = -56.0
theme_override_font_sizes/font_size = 30
text = "x 3
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="tresors_3"]
offset_left = 47.0
offset_top = -90.0
offset_right = 117.0
offset_bottom = -56.0
text = "Throw"

[node name="TextureButton" type="TextureButton" parent="tresors_3"]
modulate = Color(1, 0.961658, 0.828826, 1)
offset_left = 50.0
offset_top = -88.0
offset_right = 211.0
offset_bottom = -35.0
scale = Vector2(0.415, 0.57)
texture_normal = ExtResource("3_0p0dv")
texture_pressed = ExtResource("4_24hrw")
texture_hover = ExtResource("5_8ku7c")

[node name="Label" type="Label" parent="tresors_3/TextureButton"]
layout_mode = 0
offset_left = 9.63855
offset_top = 1.75439
offset_right = 116.639
offset_bottom = 50.7544
scale = Vector2(1.305, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Throw"
horizontal_alignment = 1
vertical_alignment = 1

[node name="weigt_factor" type="Label" parent="."]
offset_left = -36.0
offset_top = 162.0
offset_right = 230.0
offset_bottom = 211.0
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = -6
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 22
text = "The weigt make your oxygen depletes X times faster"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="tresors_1/Button" to="." method="_on_tresors_1_pressed"]
[connection signal="pressed" from="tresors_1/TextureButton" to="." method="_on_tresors_1_pressed"]
[connection signal="pressed" from="tresors_2/Button" to="." method="_on_tresors_2_pressed"]
[connection signal="pressed" from="tresors_2/TextureButton" to="." method="_on_tresors_2_pressed"]
[connection signal="pressed" from="tresors_3/Button" to="." method="_on_tresors_3_pressed"]
[connection signal="pressed" from="tresors_3/TextureButton" to="." method="_on_tresors_3_pressed"]
